Implementações: - Teste para checar se o jogador X foi vencedor; - Funções de checagem de diagonal, linha e coluna

--- a/src/makefile
+++ b/src/makefile
@@ -26,8 +26,8 @@ $(ODIR)/%.o: %.cpp $(DEPS)
 
 
 
-## default: make vetor
-Velha:$(OBJ)
+## default: 
+velha:$(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(MAIN) $(LIBS)
 .PHONY: clean
 
